--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lodash": "^3.10.1",
     "prop-types": "^15.5.8",
     "react-transition-group": "^1.1.2",
-    "velocity-animate": "^1.4.0"
+    "velocity-animate": "1.3.1"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
